[metadata]
name         = SunshineDB
version      = 1.4
description  = Lightweight json-database library for Python
url          = https://github.com/Sunshine-Database/Sunshine
license      = MIT License
keywords     = sunshine, database, json, json-database, db, async

author       = de4oult
author_email = kayra.dist@email.com

long_description              = file: PyPi.md
long_description_content_type = text/markdown

[options]
python_requires  = >=3
install_requires =
    colorama
    filelock

packages = Sunshine
zip_safe = False